--- a/src/VentanaAux/AdministradorHorario.fxml
+++ b/src/VentanaAux/AdministradorHorario.fxml
@@ -36,45 +36,46 @@
           <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #FFDBD9;">
                <children>
-                  <Label layoutX="66.0" layoutY="42.0" text="ID del horario a editar:">
+                  <Label layoutX="30.0" layoutY="44.0" text="ID del horario a editar:">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <Label layoutX="66.0" layoutY="104.0" text="Día:">
+                  <Label layoutX="30.0" layoutY="104.0" text="Día:">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <Label layoutX="66.0" layoutY="171.0" text="Hora de apertura:">
+                  <Label layoutX="30.0" layoutY="171.0" text="Hora de apertura:">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <Label layoutX="66.0" layoutY="237.0" text="Hora de cierre:">
+                  <Label layoutX="30.0" layoutY="237.0" text="Hora de cierre:">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <JFXTextField fx:id="txtBuscarHorario" layoutX="264.0" layoutY="43.0" prefHeight="25.0" prefWidth="171.0" />
-                  <JFXTextField fx:id="txtDiaHorario" layoutX="264.0" layoutY="105.0" prefHeight="25.0" prefWidth="171.0" />
-                  <JFXTextField fx:id="txtHoraApertura" layoutX="264.0" layoutY="172.0" prefHeight="25.0" prefWidth="171.0" />
-                  <JFXTextField fx:id="txtHoraCierre" layoutX="265.0" layoutY="238.0" prefHeight="25.0" prefWidth="170.0" />
-                  <JFXButton fx:id="btnBuscarHorario" buttonType="RAISED" layoutX="469.0" layoutY="41.0" text="Buscar">
+                  <JFXTextField fx:id="txtBuscarHorario" layoutX="246.0" layoutY="44.0" prefHeight="25.0" prefWidth="171.0" />
+                  <JFXTextField fx:id="txtDiaHorario" layoutX="85.0" layoutY="105.0" prefHeight="25.0" prefWidth="171.0" />
+                  <JFXTextField fx:id="txtHoraApertura" layoutX="246.0" layoutY="171.0" prefHeight="25.0" prefWidth="171.0" />
+                  <JFXTextField fx:id="txtHoraCierre" layoutX="247.0" layoutY="237.0" prefHeight="25.0" prefWidth="170.0" />
+                  <JFXButton fx:id="btnBuscarHorario" buttonType="RAISED" layoutX="469.0" layoutY="43.0" onAction="#buscarHorario" text="Buscar">
                      <font>
                         <Font name="System Bold Italic" size="13.0" />
                      </font>
                   </JFXButton>
-                  <JFXButton fx:id="btnGuardar" buttonType="RAISED" layoutX="180.0" layoutY="314.0" text="Guardar">
+                  <JFXButton fx:id="btnGuardar" buttonType="RAISED" layoutX="464.0" layoutY="302.0" onAction="#editarHorario" text="Guardar">
                      <font>
                         <Font name="System Bold Italic" size="13.0" />
                      </font>
                   </JFXButton>
-                  <JFXButton fx:id="btnCancelar" buttonType="RAISED" layoutX="350.0" layoutY="314.0" text="Cancelar">
+                  <Label layoutX="320.0" layoutY="104.0" text="ID:">
                      <font>
-                        <Font name="System Bold Italic" size="13.0" />
+                        <Font size="18.0" />
                      </font>
-                  </JFXButton>
+                  </Label>
+                  <JFXTextField fx:id="txtIDHorario" disable="true" layoutX="377.0" layoutY="105.0" prefHeight="25.0" prefWidth="171.0" />
                </children></AnchorPane>
           </content>
       </Tab>
